--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.B07DemoSummer2024"
         tools:targetApi="31">
         <activity
-            android:name=".ItemAdapater"
+            android:name=".QuestionView"
+            android:exported="false" />
+        <activity
+            android:name=".ItemAdapter"
             android:exported="false" />
         <activity
             android:name=".Item"
