--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.B07DemoSummer2024"
         tools:targetApi="31">
         <activity
+            android:name=".DocumentsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ActionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CategoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".InfoStorageActivity"
+            android:exported="false" />
+        <activity
             android:name=".ItemAdapater"
             android:exported="false" />
         <activity
