--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.B07DemoSummer2024"
         tools:targetApi="31">
+
+        <!-- Information Storage -->
+        <activity
+            android:name=".EmergencyContactsActivity" />
+        <activity
+            android:name=".EditContactActivity" />
+        <activity
+            android:name=".DeleteContactActivity" />
+        <activity
+            android:name=".AddContactActivity" />
+
         <activity
             android:name=".DocumentsActivity"
             android:exported="false" />
@@ -25,13 +36,7 @@
             android:name=".InfoStorageActivity"
             android:exported="false" />
         <activity
-            android:name=".ItemAdapater"
-            android:exported="false" />
-        <activity
             android:name=".Item"
-            android:exported="false" />
-        <activity
-            android:name=".Item2"
             android:exported="false" />
         <activity
             android:name=".SpinnerFragment"
@@ -41,9 +46,6 @@
             android:exported="false" />
         <activity
             android:name=".HomeFragment"
-            android:exported="false" />
-        <activity
-            android:name=".Activity2"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
